# rsbwapi

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  client.rs  cog.toml  main.rs  shm.rs  unit.rs  unittype.rs  wrapper.h
.github/workflows/: codeql-analysis.yml  rust.yml
bwapi_wrapper/: Cargo.toml  README.md  Windows.h  build.rs  wrapper.h
bwapi_wrapper/src/: bindings.rs  command.rs  lib.rs  position.rs  prelude.rs  tech_type.rs  unit_type.rs  upgrade_type.rs  weapon_type.rs
example_bot/: Cargo.toml
example_bot/.cargo/: config.toml
example_bot/src/: main.rs
repltype/BWAPI/: EventType.h  TechType.h  Type.h  UnitType.h  UpgradeType.h
src/: aimodule.rs  bridge.rs  bullet.rs  bwem.rs  can_do.rs  cell.rs  client.rs  command.rs  force.rs  game.rs  lib.rs  main.rs  player.rs  position.rs  predicate.rs  projected.rs  region.rs  shm.rs  types.rs  unit.rs  unit_type.rs  unit_type_container.rs
src/bwem/: area.rs  base.rs  cp.rs  defs.rs  graph.rs  map.rs  neutral.rs  tiles.rs
src/map_analyzer/: mod.rs
src/sma/: mod.rs
