[package]
name = "rsbwapi"
version = "0.2.5"
authors = ["Dennis Waldherr <bytekeeper@mailbox.org>"]
description = "BWAPI client to write AI players for Starcraft Broodwar"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Bytekeeper/rsbwapi/"
repository = "https://github.com/Bytekeeper/rsbwapi/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
bwapi_wrapper = { path = "bwapi_wrapper", version = "0" }
winapi = { version = "0.3", features = ["winuser", "memoryapi", "handleapi"] }
memchr = "2.2.0"
num-traits = "0.2"
num-derive = "0.3"
derive_more = "0.99"
rstar = "0.8"
itertools="0.10"
ahash = "0.7"

metered = { version = "0.8", optional = true}
serde = { version = "1.0", optional = true}


[features]
metrics = ["metered", "serde"]

[dev-dependencies]
inflate = "0.4"
image = "0.23"

[profile.dev.package."*"]
opt-level=3
