[package]
name = "rsbwapi"
version = "0.3.2"
authors = ["Dennis Waldherr <bytekeeper@mailbox.org>"]
description = "BWAPI client to write AI players for Starcraft Broodwar"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Bytekeeper/rsbwapi/"
repository = "https://github.com/Bytekeeper/rsbwapi/"
readme = "README.md"

[workspace]
members = ["bwapi_wrapper"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
bwapi_wrapper = { path = "bwapi_wrapper", version = "0.3.2" }
winapi = { version = "0.3", features = ["winbase", "memoryapi", "handleapi"] }
memchr = "2.7"
num-traits = "0.2"
num-derive = "0.3"
derive_more = "0.99"
rstar = "0.10"
itertools="0.10"
ahash = "0.8"
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
rusttype = { version = "0.9", optional = true }

metered = { version = "0.9", optional = true}
serde = { version = "1.0", optional = true}


[features]
metrics = ["metered", "serde"]
debug_draw = ["image", "imageproc", "rusttype"]

[dev-dependencies]
inflate = "0.4"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

[profile.dev.package."*"]
opt-level=3
