[package]
name = "rsbwapi"
version.workspace = true
authors = ["Dennis Waldherr <bytekeeper@mailbox.org>"]
description = "BWAPI client to write AI players for Starcraft Broodwar"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Bytekeeper/rsbwapi/"
repository = "https://github.com/Bytekeeper/rsbwapi/"
readme = "README.md"

[workspace]
members = ["bwapi_wrapper", "example_bot"]

[workspace.package]
version = "0.3.4"

[workspace.dependencies]
num-traits = "0.2"
num-derive = "0.4"
derive_more = { version = "1.0.0", features = ["full"] }
image = "0.25"
imageproc = "0.25"


[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]


[dependencies]
num-traits.workspace = true
num-derive.workspace = true
derive_more.workspace = true
bwapi_wrapper = { path = "bwapi_wrapper", version = "0.3.3" }
winapi = { version = "0.3", features = ["winbase", "memoryapi", "handleapi"] }
memchr = "2.7"
rstar = "0.12"
itertools = "0.14"
ahash = "0.8"
image = { workspace = true, optional = true }
imageproc = { workspace = true, optional = true }
rusttype = { version = "0.9", optional = true }

metered = { version = "0.9", optional = true}
serde = { version = "1.0", optional = true}


[features]
metrics = ["metered", "serde"]
debug_draw = ["image", "imageproc", "rusttype"]

[dev-dependencies]
inflate = "0.4"
image.workspace = true
imageproc.workspace = true
rusttype = "0.9"

[profile.dev.package."*"]
opt-level=3
