[package]
name = "bwapi_wrapper"
version = "0.1.0"
authors = ["Dennis Waldherr <bytekeeper@mailbox.org>"]
edition = "2018"
homepage = "https://github.com/Bytekeeper/rsbwapi/"
license = "LGPL-3"
repository = "https://github.com/Bytekeeper/rsbwapi/"
description = "Bindings to BWAPI"
exclude = ["bwapi/apps", "bwapi/Documentation", "bwapi/Release_Binary"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"


[build-dependencies]
bindgen = "0.53"
regex = "1"

