[package]
name = "bwapi_wrapper"
version = "0.2.3"
authors = ["Dennis Waldherr <bytekeeper@mailbox.org>"]
edition = "2018"
homepage = "https://github.com/Bytekeeper/rsbwapi/"
license = "LGPL-3.0-or-later"
repository = "https://github.com/Bytekeeper/rsbwapi/"
description = "Bindings to BWAPI"
exclude = ["bwapi/apps", "bwapi/Documentation", "bwapi/Release_Binary"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
derive_more = "0.99"


[build-dependencies]
bindgen = "0.60"
regex = "1"

